[gd_scene load_steps=3 format=3 uid="uid://dg857gstb1nq7"]

[ext_resource type="Script" uid="uid://bk4o8i6h4iqmn" path="res://settings.gd" id="1_0cmel"]
[ext_resource type="Texture2D" uid="uid://dv7wg2qtohm66" path="res://setting_bg.png" id="1_ufg0w"]

[node name="SettingsControl" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0cmel")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -768.0
offset_top = -432.0
offset_right = 768.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ufg0w")

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = -88.0
offset_top = 228.0
offset_right = 84.0
offset_bottom = 326.0
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="ResumeButton" type="Button" parent="."]
offset_left = -88.0
offset_top = 68.0
offset_right = 84.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 25
text = "Resume
"

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
